--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha2'
 
     implementation 'com.google.android.material:material:1.3.0-alpha2'
+
+    implementation 'androidx.activity:activity-ktx:1.7.0'
 }
