--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     namespace 'com.example.todolist'
     compileSdk 33
@@ -49,4 +51,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha2'
 
     implementation 'androidx.activity:activity-ktx:1.7.0'
+
+    def room_version = "2.5.1"
+
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
